--- a/molly/molly/apps/contact/templates/contact/index.html
+++ b/molly/molly/apps/contact/templates/contact/index.html
@@ -8,7 +8,7 @@
 
 <div class="section">
   <h2>University contacts</h2>
-  <ul>
+  <ul class="link-list">
     <li><a class="phone" href="tel:+441865270000">General enquiries<br /><small>01865 (2)70000</small></a></li>
     <li><a class="phone" href="tel:+441865280000">Switchboard<br /><small>01865 (2)80000</small></a></li>
     <li class="round-bottom"><a class="phone" href="tel:+441865273200">Computing Services help desk<br /><small>01865 (2)73200</small></a></li>
@@ -17,7 +17,7 @@
 
 <div class="section">
   <h2>Emergency contacts</h2>
-  <ul>
+  <ul class="link-list">
     <li><a class="phone" href="tel:112">Emergency services<br /><small>112</small></a></li>
     <li><a class="phone" href="tel:+441865289999">University security <small>(emergency)<br />01865 (2)89999</small></a></li>
     <li><a class="phone" href="tel:+441865272944">University security <small>(enquiries)<br />01865 (2)72944</small></a></li>
@@ -27,7 +27,7 @@
 
 <div class="section">
   <h2>Health and welfare</h2>
-  <ul>
+  <ul class="link-list">
     <li><a class="phone" href="tel:+448454647">NHS Direct<br /><small>0845 46 47</small></a></li>
     <li><a class="phone" href="tel:+441865270300">University Counselling Service<br /><small>01865 (2)70300</small></a></li>
     <li><a class="phone" href="tel:+441865270270">Oxford Nightline<br /><small>01865 (2)70270</small></a></li>
