--- a/molly/molly/apps/feeds/templates/rss/news/item_list.html
+++ b/molly/molly/apps/feeds/templates/rss/news/item_list.html
@@ -15,7 +15,7 @@
 <div class="section">
     <h2>{{ feed.title }}</h2>
     
-    <ul>
+    <ul class="link-list">
 {% for item in feed.item_set.all %}
         <li {% if forloop.last %}class="round-bottom"{% endif %}>
             <a href="{{ item.get_absolute_url }}">
