--- a/molly/molly/apps/places/templates/places/nearby_detail.html
+++ b/molly/molly/apps/places/templates/places/nearby_detail.html
@@ -59,7 +59,7 @@
 
 
 
-<ul>
+<ul class="link-list">
 {% if entities %}
 {% for entity_group in entities %}
     {% ifequal entity_group|length 1 %}
