--- a/molly/molly/apps/service_status/templates/service_status/index.html
+++ b/molly/molly/apps/service_status/templates/service_status/index.html
@@ -21,7 +21,7 @@
 
 
 
-  <ul class="service-status">
+  <ul class="link-list service-status">
 {% for status in statuses %}
     <li class="service-status service-status-{{ status.status }}{% if forloop.last %} round-bottom{% endif %}">
       <span class="service-name">{{ status.name }}</span>
