--- a/molly/molly/apps/z3950/templates/z3950/item_holdings_detail.html
+++ b/molly/molly/apps/z3950/templates/z3950/item_holdings_detail.html
@@ -69,7 +69,7 @@
     {% endifnotequal %}
 {% endif %}
 
-    <ul>
+    <ul class="content-list">
 {% for book in books %}
     {# non-link-item #}
     <li>
