--- a/molly/demos/molly_oxford/templates/home/index.html
+++ b/molly/demos/molly_oxford/templates/home/index.html
@@ -74,7 +74,7 @@
         </table>
     </div>
 
-    <ul class="stand-alone">
+    <ul class="stand-alone link-list round-top">
             <li class="round-top"><a href="{% url home:static_about %}">About this site</a></li>
 			{% if has_user_messages %}
             <li><a href="{% url home:messages %}">Read messages from the developers</a></li>
