--- a/molly/molly/apps/feeds/templates/rss/events/item_list.html
+++ b/molly/molly/apps/feeds/templates/rss/events/item_list.html
@@ -11,7 +11,7 @@
     {% endif %}
 <div class="section">
   <h2>{{ item.dt_start|date:"l, jS F Y" }}</h2>
-  <ul>
+  <ul class="link-list">
   {% endifchanged %}
   <li {% if forloop.last %}class="round-bottom"{% endif %}>
     <a href="{{ item.get_absolute_url }}">
