--- a/molly/molly/apps/feeds/templates/rss/news/index.html
+++ b/molly/molly/apps/feeds/templates/rss/news/index.html
@@ -28,7 +28,7 @@
 
 <div class="section">
     <h2>Feeds</h2>
-    <ul>
+    <ul class="link-list">
 {% for feed in feeds %}
         <li {% if forloop.last %}class="round-bottom"{% endif %}>
             <a href="{{ feed.get_absolute_url }}">{{ feed.title }}</a>
