--- a/molly/molly/apps/places/templates/places/category_list.html
+++ b/molly/molly/apps/places/templates/places/category_list.html
@@ -4,7 +4,7 @@
 
 <div class="section">
   <h2>Places</h2>
-	<ul>
+	<ul class="link-list">
 	{% for entity_type in entity_types %}
 	    <li{% if forloop.last %} class="round-bottom"{% endif %}><a href="{% url places:category_detail entity_type.slug %}">{{ entity_type.verbose_name_plural|capfirst }}</a></li>
 	{% endfor %}
