--- a/molly/molly/apps/places/templates/places/metadata/osm.html
+++ b/molly/molly/apps/places/templates/places/metadata/osm.html
@@ -15,7 +15,7 @@
   </div></div>
 {% endif %}
 
-<ul>
+<ul class="link-list">
 {% if entity.metadata.osm.tags.phone %}
     <li>
         <a class="phone" href="{{ entity.metadata.osm.tags.phone|telephone_uri }}">
