--- a/molly/molly/apps/places/templates/places/nearby_list.html
+++ b/molly/molly/apps/places/templates/places/nearby_list.html
@@ -8,7 +8,7 @@
 {% for name, types in entity_types %}
 <div class="section">
   <h2>{{ name }}</h2>
-	<ul>
+	<ul class="link-list">
 	{% for entity_type in types %}{% if entity %}
 	    <li{% if forloop.last %} class="round-bottom"{% endif %}><a href="{% url places:entity_nearby_detail entity.identifier_scheme,entity.identifier_value,entity_type.slug %}">
 	{% else %}
