--- a/molly/molly/apps/z3950/templates/z3950/item_list.html
+++ b/molly/molly/apps/z3950/templates/z3950/item_list.html
@@ -38,7 +38,7 @@
 {% endif %}
 </div>
 
-<ul>
+<ul class="link-list">
 {% for item in page.object_list %}
 <li{% if forloop.last %} class="round-bottom"{% endif %}>
     <a href="{% url z3950:item_detail item.control_number %}">
