--- a/molly/molly/apps/podcasts/templates/podcasts/index.html
+++ b/molly/molly/apps/podcasts/templates/podcasts/index.html
@@ -48,14 +48,14 @@
 
 
 
-<ul class="stand-alone">
-	<li class="round-bottom round-top"><a href="{% url podcasts:podcast "top-downloads" %}">Top downloads from iTunes U</a></li>
+<ul class="stand-alone link-list round-top">
+	<li><a href="{% url podcasts:podcast "top-downloads" %}">Top downloads from iTunes U</a></li>
 </ul>
 
 
 <div class="section" >
 	<h2>By division</h2>
-<ul>
+<ul class="link-list">
 {% for category in categories %}
     <li {% if forloop.last %}class="round-bottom" {% endif %}>
 	<a href="{{ category.get_absolute_url }}">{{ category.name }}</a></li>
