--- a/molly/molly/apps/z3950/templates/z3950/index.html
+++ b/molly/molly/apps/z3950/templates/z3950/index.html
@@ -19,7 +19,7 @@
         <li><a class="email" href="mailto:reader.services@ouls.ox.ac.uk">E-mail<br/>
 	        <small>reader.services@ouls.ox.ac.uk</small></a></li>
         <li><a class="phone" href="tel:+441865277162">Telephone<br/><small>01865 (2)77162</small></a></li>
-        <li><a class="external" href="http://www.bodleian.ox.ac.uk/">Bodleian Libraries</small></a></li>
+        <li><a class="external" href="http://www.bodleian.ox.ac.uk/">Bodleian Libraries</a></li>
         <li><a class="external" href="http://solo.bodleian.ox.ac.uk/">SOLO <small>(Search Oxford Libraries Online)</small></a></li>
         <li class="round-bottom"><a class="external" href="http://library.ox.ac.uk/">OLIS <small>(Oxford Library Information System)</small></a></li>
     </ul>
