--- a/molly/demos/molly_oxford/site-media/css/groups/smart.css
+++ b/molly/demos/molly_oxford/site-media/css/groups/smart.css
@@ -24,6 +24,7 @@ dl#results dt {
     color: #fff;
     background: #002B4C;
     background:-webkit-gradient(linear, left top, right top, from(#002B4C), to(rgba(223,223,223,0.2)));
+    background:-moz-linear-gradient(left, #002B4C, rgba(223,223,223,0.2));
 
     padding: 3px;
     margin: 8px 0;
@@ -66,7 +67,6 @@ div#loading-bg {
     opacity: 0;
 }
 
-<<<<<<< HEAD
 div#loading_img {
     position: fixed;
     margin:0 20%;
