--- a/molly/demos/molly_oxford/templates/base.xhtml
+++ b/molly/demos/molly_oxford/templates/base.xhtml
@@ -94,11 +94,12 @@
 
 {% if not hide_feedback_link %}
 {% block bottom_links %}
-  <div style="width:50%; float:left; margin-top: 15px; margin-bottom:10px;">
+  {% include "geolocation/update_location_embed.html" %}
+  <div style="width:50%; float:left; margin-top: 2px; margin-bottom:10px;">
     <a style="margin:0 2px 0 10px; background-color:white; padding:10px; -webkit-border-radius:6px; -moz-border-radius:6px; text-align:center; display:block"
        href="{% url feedback:index %}?referer={{ full_path|urlencode }}">Provide feedback for this page</a>
   </div>
-  <div style="width:50%; float:left; margin-top: 15px; margin-bottom:10px;">
+  <div style="width:50%; float:left; margin-top: 2px; margin-bottom:10px;">
     <a style="margin:0 10px 0 2px; background-color:white; padding:10px; -webkit-border-radius:6px; -moz-border-radius:6px; text-align:center; display:block"
        href="{% url url_shortener:index %}?path={{ full_path|urlencode }}">2D barcode and shortened link</a>
   </div>
