removed shadow text from h3s in feedback page

--- a/molly/molly/apps/feedback/templates/feedback/index.html
+++ b/molly/molly/apps/feedback/templates/feedback/index.html
@@ -16,6 +16,12 @@
 {% endif %}
 
 {% if not sent %}
+
+
+<style>
+    h3 {text-shadow:none;}
+</style>
+
 <form method="post" action=".">
 <input type="hidden" name="referer" value="{{ referer }}"/>
 
