--- a/molly/molly/geolocation/templates/geolocation/update_location_embed.html
+++ b/molly/molly/geolocation/templates/geolocation/update_location_embed.html
@@ -32,7 +32,9 @@ function geolocate() {
     p = $(this).closest('div');
     l = p.find('.location');
     if (positionWatchId != null)
-        return; 
+        return;
+    
+    
         
     location_options = {
             enableHighAccuracy: true,
@@ -49,14 +51,25 @@ function geolocate() {
     l.css('display', 'block');
     p.find('.location-form').css('display', 'none');
     if (positionInterface) {
-        l.html('Please wait while we attempt to determine your location...');
+        l.html('Please wait while we attempt to determine your location&hellip;');
         positionInterface.statusTarget = l;
         positionWatchId = positionInterface.watchPosition(wrapWithArg(positionWatcher, l), wrapWithArg(sendPositionError, l), location_options);
     } else
         l.html('We have no means of determining your location automatically.');
 }
 
+function cancelGeolocate() {
+    if (positionWatchId == null)
+        return;
+    positionInterface.clearWatch(positionWatchId);
+    positionWatchId = null;
+    positionInterface = null;
+    $('.location').html((locationName != null) ? locationName : "No location set.");
+}
+    
+
 function manualLocation(e) {
+  cancelGeolocate();
   p = $(this).closest('div');
   if (p.find('.location').css('display') == 'block')
     return false;
@@ -69,21 +82,19 @@ function manualLocation(e) {
     $.post(base+'geolocation/', {
       format: 'json',
       name: newLocationName,
-      take_first: true,
+      method: 'geocoded',
     }, function(data) {
       if (data.name) {
         locationName = data.name;
         $('.location').text(data.name);
       } else {
-        p.find('.location').html("<i>We don't know where that is.</i>"); 
+        p.find('.location').html("<i>"+data.error+"</i>"); 
         window.setTimeout(function() {
           p.find('.location').text(locationName);
         }, 5000);
       }
     });
   }
-
-
   return false;
 }
 
@@ -112,7 +123,7 @@ $(function() {
         <label style="display:none;" for="location-name">Set a new location:</label>
         <input class="return_url" name="return_url" type="hidden" value="{{ return_url|default:"" }}"/>
         <input class="location-name" name="name" value="{{ location }}"/>
-        <input name="take_first" type="hidden" value="true"/>
+        <input name="method" type="hidden" value="geocoded"/>
         <input class="location-submit" type="submit" value="Update"/>
 
 </form>
