Moved geolocation JS back into smart.js. Added location_error to the template context. Removed lots of stuff that's no longer needed.

--- a/molly/demos/molly_oxford/templates/base.xhtml
+++ b/molly/demos/molly_oxford/templates/base.xhtml
@@ -8,7 +8,7 @@
 
 {% if use_javascript %}
     <script type="text/javascript">
-        var require_location = {{ require_location|yesno:"true,false" }};
+        var locationRequired = {{ require_location|yesno:"true,false" }};
         var base = "{% url home:index %}";
         var locationName = {% if geolocation.name %}"{{ geolocation.name|escapejs }}"{% else %}null{% endif %};
     </script>
