--- a/molly/molly/geolocation/templates/geolocation/update_location_embed.html
+++ b/molly/molly/geolocation/templates/geolocation/update_location_embed.html
@@ -1,124 +1,6 @@
-{% load maps %}
-
-<script type="text/javascript">
-$.fn.selectAll = function() {
-  return this.each(function() {
-    start = 0; end = this.value.length;
-    if(this.setSelectionRange) {
-      this.focus();
-      this.setSelectionRange(start, end);
-    } else if(this.createTextRange) {
-      var range = this.createTextRange();
-      range.collapse(true);
-      range.moveEnd('character', end);
-      range.moveStart('character', start);
-      range.select();
-    }
-  });
-};
-
-function positionMethodAvailable() {
-  return ((window.navigator && navigator.geolocation) || (window.google && google.gears))
-}
-
-function wrapWithArg(f, new_arg) {
-  function g(arg) {
-    return f(arg, new_arg);
-  }
-  return g;
-}
-
-function geolocate() {
-    p = $(this).closest('div');
-    l = p.find('.location');
-    if (positionWatchId != null)
-        return;
-    
-    
-        
-    location_options = {
-            enableHighAccuracy: true,
-            maximumAge: 30000,
-    }
-    if (window.google && google.gears) {
-        positionInterface = getGearsPositionInterface('Mobile Oxford');
-        positionMethod = 'gears';
-    } else if (window.navigator && navigator.geolocation) {
-        positionInterface = navigator.geolocation;
-        positionMethod = 'html5';
-    }
-    
-    l.css('display', 'block');
-    p.find('.location-form').css('display', 'none');
-    if (positionInterface) {
-        l.html('Please wait while we attempt to determine your location&hellip;');
-        positionInterface.statusTarget = l;
-        positionWatchId = positionInterface.watchPosition(wrapWithArg(positionWatcher, l), wrapWithArg(sendPositionError, l), location_options);
-    } else
-        l.html('We have no means of determining your location automatically.');
-}
-
-function cancelGeolocate() {
-    if (positionWatchId == null)
-        return;
-    positionInterface.clearWatch(positionWatchId);
-    positionWatchId = null;
-    positionInterface = null;
-    $('.location').html((locationName != null) ? locationName : "No location set.");
-}
-    
-
-function manualLocation(e) {
-  cancelGeolocate();
-  p = $(this).closest('div');
-  if (p.find('.location').css('display') == 'block')
-    return false;
-  p.find('.location-form').css('display', 'none');
-  p.find('.location').css('display', 'block')
-
-  newLocationName = p.find('.location-name').val() || null;
-  if (locationName != newLocationName) {
-    p.find('.location').html('<i>Updating&hellip;</i>');
-    $.post(base+'geolocation/', {
-      format: 'json',
-      name: newLocationName,
-      method: 'geocoded',
-    }, function(data) {
-      if (data.name) {
-        locationName = data.name;
-        $('.location').text(data.name);
-      } else {
-        p.find('.location').html("<i>"+data.error+"</i>"); 
-        window.setTimeout(function() {
-          p.find('.location').text(locationName);
-        }, 5000);
-      }
-    });
-  }
-  return false;
-}
-
-$(function() {
-  $('.location-form').css('display', 'none').submit(manualLocation);
-  $('.location-submit').css('display', 'none');
-  $('.location-name').css('width', '100%');
-
-  $('.position-box').each(function() {
-    var p = $(this);
-    if (positionMethodAvailable()) {
-      p.append($('<span style="position:absolute; right:10px; top:4px; font-size:30px; color:#0000ff; cursor:pointer;">↻</span>').click(geolocate));
-    }
-    p.find('.location').click(function() {
-      $(this).css('display', 'none');
-      p.find('.location-form').css('display', 'block');
-      p.find('.location-name').focus().blur(manualLocation).val(locationName).selectAll();
-    }).css('display', 'block').css('cursor', 'pointer');
-  });
-});
-</script>
-
-<div class="position-box" style="position:relative; background-color:white; -webkit-border-radius:6px; -moz-border-radius:6px; margin:15px 10px 2px; padding:10px 50px">
-<span class="location">{{ geolocation.name|default:"No location set" }} <small>Select to edit</small></span>
+<div class="location-box" id="location-box" style="position:relative; background-color:white; -webkit-border-radius:6px; -moz-border-radius:6px; margin:15px 10px 2px; padding:10px 50px">
+{% if location_error %}<p class="location-error">{{ location_error }}</p>{% endif %}
+<span class="location">{{ geolocation.name|default:"No location set" }}</span>
 <form method="post" action="{% url geolocation:index %}" class="location-form">
         <label style="display:none;" for="location-name">Set a new location:</label>
         <input class="return_url" name="return_url" type="hidden" value="{{ return_url|default:"" }}"/>
@@ -132,52 +14,3 @@ $(function() {
   <img style="font-size:30px; line-height:30px" src="{{ MEDIA_URL }}png/location.png" alt="⬠"/>
 </div>
 </div>
-
-{% comment %}
-
-<div class="update-location">
-
-{% if not form.cleaned_data.name %}
-<div id="geolocate-js"> </div>
-{% endif %}
-
-<div class="manual-update-location">
-{% if form.cleaned_data.name %}
-
-{% include "geolocation/update_location_confirm.html" %}
-
-{% else %}
-
-<form method="post" action="{% url geolocation:index %}" class="manual-update-form">
-        <label for="location-name">Set a new location</label>:
-        <input id="return_url" name="return_url" type="hidden" value="{{ return_url|default:"" }}"/>
-        <input id="location-name" name="name" value="{{ location }}"/>
-        <input type="submit" value="Update"/><br/>
-        <small>Examples: 'oucs' (a unit code), 'Trinity College' (a college or department), 'Parks Road' (an address), 'OX1 3PG' (a postcode).</small>
-
-</form>
-
-{% endif %}
-</div>
-
-</div></div></div>
-
-<h2>Automatic geolocation</h2>
-<div class="note"><div class="bubble pad-5">
-{% if preferences.location.placemark %}
-        <p id="location_status">We think you are somewhere near <strong class="nobr">{{ preferences.location.placemark.0 }}</strong> ({{ preferences.location.location.0 }} {{ preferences.location.location.1 }}).</p>
-{% else %}
-{% if preferences.location.location %}
-        <p id="location_status">We think you are somewhere near <strong class="nobr">{{ preferences.location.location.0 }} {{ preferences.location.location.1 }}</strong>.</p>
-{% else %}
-        <p id="location_status">Sorry, but we are unable to determine your location automatically.</p>
-{% endif %}
-{% endif %}
-<p id="location_update"> </p>
-        <script type="text/javascript">
-            if (positionMethodAvailable())
-                $('#location_update').append(' <a href="#" onclick="javascript:requestPosition();">Determine automatically<\/a>');
-        </script>
-        </div></div>
-</div>
-{% endcomment %}
