Added locationFound event.

--- a/molly/molly/geolocation/templates/geolocation/update_location.html
+++ b/molly/molly/geolocation/templates/geolocation/update_location.html
@@ -2,11 +2,22 @@
 
 {% block extrahead %}{{ block.super }}
 <meta name="robots" content="noindex"/>
+<script type="text/javascript">
+
+window.addEventListener("locationFound", function(e) {
+  if (e.uploaded) {
+    r = /[?&]return_url=(.*)($|&)/;
+    return_url = unescape(r.exec(window.location.search)[1]);
+    l = window.location;
+    l.replace(l.protocol+"//"+l.host+return_url);
+  }
+}, false);
+    
+</script>
 {% endblock %}
 
 {% block content %}
 
-{% include "geolocation/update_location_embed.html" %}
-
+You need to set a location before you can view this page.
 
 {% endblock %}
