--- a/molly/molly/apps/service_status/templates/service_status/index.html
+++ b/molly/molly/apps/service_status/templates/service_status/index.html
@@ -6,9 +6,9 @@
 <div class="section">
   <h2>{{ name }} <small>at {{ lastBuildDate|date:"G:i D, j F Y" }}</small></h2>
   {% if announcements %}
-  <h3>Service announcements</h3>
+  <h3 class="invisible">Service announcements</h3>
   
-  <ul>
+  <ul class="content-list no-round-bottom">
 {% for announcement in announcements %}
     <li>
       <h3>{{ announcement.title }}</h3>
@@ -19,7 +19,7 @@
   </ul>
 {% endif %}
 
-
+  <h3 class="invisible">Services</h3>
 
   <ul class="link-list service-status">
 {% for status in statuses %}
