Alternative location matches are now presented to the user.

--- a/molly/molly/geolocation/templates/geolocation/update_location_embed.html
+++ b/molly/molly/geolocation/templates/geolocation/update_location_embed.html
@@ -14,6 +14,8 @@
   <img style="font-size:30px; line-height:30px" src="{{ MEDIA_URL }}png/location.png" alt="⬠"/>
 </div>
 
+<div class="location-alternatives"></div>
+
 <div id="location-history">
   <h2>Location history</h2>
   <div>
