--- a/molly/molly/apps/feature_vote/templates/feature_vote/index.html
+++ b/molly/molly/apps/feature_vote/templates/feature_vote/index.html
@@ -13,6 +13,16 @@
   <ul class="content-list">
 {% for idea in ideas %}
     <li>
+      <div style="float:right">
+        <form method="post" action=".">
+          <input type="hidden" name="csrf" value="{{ csrf }}"/>
+          <input type="hidden" name="id" value="{{ idea.id }}"/>
+
+          <input type="image" src="{{ MEDIA_URL }}" name="vote_up" value="Vote up"/>
+          <span class="vote-count">{{ idea.net_votes }}</span>
+          <input type="image" src="{{ MEDIA_URL }}" name="vote_down" value="Vote down"/>
+        </form>
+      </div>
       <h3>{{ idea.title }}</h3>
       <p><small>by {{ idea.user_name }}, added {{ idea.created|timesince }} ago</small></p>
       <p>{{ idea.description|truncatewords:20 }}</p>
@@ -39,6 +49,7 @@
           <tr>
             <td></td>
             <td>
+              <input type="hidden" name="csrf" value="{{ csrf }}"/>
               <input type="submit" value="Suggest"/>
             </td>
           </tr>
