--- a/molly/molly/apps/feature_vote/templates/feature_vote/idea_detail.html
+++ b/molly/molly/apps/feature_vote/templates/feature_vote/idea_detail.html
@@ -1,6 +1,67 @@
-{% extends "feature_vote/base.html" %}
+{% extends "feature_vote/base.html" %}{% load comments %}
 
 {% block content %}
+
+<div class="section">
+  <h2>Details</h2>
+
+  <div class="section-content">
+    <p><small>by {{ idea.user_name }}, added {{ idea.created|timesince }} ago</small></p>
+
+    <p>{{ idea.description|linebreaksbr }}</p>
+  </div>
+</div>
+
+<div class="section">
+  <h2>Comments</h2>
+
+  <ul class="content-list">
+{% get_comment_list for idea as comments %}
+{% for comment in comments %}
+    <li>
+      <h3>posted by {{ comment.user_name }} {{ comment.submit_date|timesince }} ago</h3>
+
+      <p>{{ comment.comment|linebreaksbr }}</p>
+    </li>
+{% endfor %}
+    <li>
+      {% get_comment_form for idea as form %}
+      <form method="post" action="{% comment_form_target %}">
+        <table>
+          <tbody>
+            <tr>
+              <th>{{ form.name.label }}:</th>
+              <td>{{ form.name }}</td>
+            </tr>
+            <tr>
+              <th>{{ form.email.label }}:</th>
+              <td>{{ form.email }}</td>
+            </tr>
+            <tr>
+              <th>{{ form.comment.label }}:</th>
+              <td>{{ form.comment }}</td>
+            </tr>
+            <tr style="display:none;">
+              <th>{{ form.honeypot.label }}:</th>
+              <td>{{ form.honeypot }}</td>
+            </tr>
+          </tbody>
+          <tfoot>
+            <tr>
+              <td></td>
+              <td>
+                {{ form.content_type }}
+                {{ form.object_pk }}
+                {{ form.timestamp }}
+                {{ form.security_hash }}
+                <input type="submit" value="Submit"/>
+              </td>
+            </tr>
+          </tfoot>
+        </table>
+      </form>
+  </ul>
+</div>
 
 {% endblock %}
 
